syntax = "proto3";

package calculator;
option go_package="calculatorpb";

message Sum {
    int32 first_num = 1;
    int32 second_num = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

message DecompositManyTimeRequest {
    int32 primeNumber = 1;
}

message DecompositManyTimesResponse {
    int32 result = 1;
}

service CalculateService {
    // Unary
    rpc Sum(SumRequest) returns(SumResponse);

    // Server Streaming
    rpc DecompositManyTimes(DecompositManyTimeRequest) returns (stream DecompositManyTimesResponse) {};
}
